--- a/app/assets/stylesheets/shared/theme.sass
+++ b/app/assets/stylesheets/shared/theme.sass
@@ -65,3 +65,10 @@ $hot:               #ff0090
   -ms-background-size: $w $h
   -o-background-size: $w $h
   background-size: $w $h
+
+@mixin background_cover
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -ms-background-size: cover
+  -o-background-size: cover
+  background-size: cover
